lower z-index shapes (fix not clickable link)

--- a/assets/css/blk-design-system.css
+++ b/assets/css/blk-design-system.css
@@ -13475,7 +13475,7 @@ hr {
 .shapes {
   position: absolute;
   opacity: 0.02;
-  z-index: 2; }
+  z-index: -1; }
 
 .main {
   position: relative;
